--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-FRONTEND_URL:"http://localhost:5173"
+FRONTEND_URL="http://localhost:5173"
 MONGO_URI="mongodb+srv://bhargavaryan5:9dOkwjPBArOroMhJ@mongocluster.xbz9gtc.mongodb.net/portfolio-backend"
 JWT_SECRET=vdjvfjav$%&FYvjvctdrd5ydcgcCMBGFKYCJHVM
 ADMIN_EMAIL=bhargavaryan5@gmail.com
